k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopease
  labels:
    app: shopease
